--- a/package.json
+++ b/package.json
@@ -1,9 +1,24 @@
 {
+  "name": "nuxt-app",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "build": "nuxt build",
+    "dev": "nuxt dev",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare"
+  },
   "dependencies": {
-    "@primevue/themes": "^4.2.2",
-    "primevue": "^4.2.2"
+    "@primevue/themes": "^4.2.3",
+    "nuxt": "^3.14.1592",
+    "primeflex": "^3.3.1",
+    "primeicons": "^7.0.0",
+    "primevue": "^3.53.0",
+    "vue": "latest",
+    "vue-router": "latest"
   },
   "devDependencies": {
-    "@primevue/nuxt-module": "^4.2.2"
+    "@primevue/nuxt-module": "^4.2.3"
   }
 }
